@@ -137,6 +137,26 @@
 
   <sectiontype name="postgresql" implements="relstorage.adapter"
     datatype=".PostgreSQLAdapterFactory">
+    <key name="keep-history" datatype="boolean" default="true">
+      <description>
+        If this parameter is set to true (the default), the adapter
+        will create and use a history-preserving database schema,
+        similar to FileStorage. A history-preserving schema supports
+        ZODB-level undo, but grows more quickly and requires extensive
+        packing on a regular basis.
+
+        If this parameter is set to false, the adapter will create and
+        use a history-free database schema. Undo will not be supported,
+        but the database will not grow as quickly. The database will
+        still require regular garbage collection (which is accessible
+        through the database pack mechanism.)
+
+        This parameter must not change once the database schema has
+        been installed. If you want to convert between a
+        history-preserving and a history-free database, use the
+        zodbconvert utility to copy to a new database.
+      </description>
+    </key>
     <key name="dsn" datatype="string" required="no" default="">
       <description>
         The PostgreSQL data source name.  For example:
@@ -152,6 +172,27 @@
 
   <sectiontype name="oracle" implements="relstorage.adapter"
     datatype=".OracleAdapterFactory">
+    <key name="keep-history" datatype="boolean" default="true">
+      <description>
+        If this parameter is set to true (the default), the adapter
+        will create and use a history-preserving database schema,
+        similar to FileStorage. A history-preserving schema supports
+        ZODB-level undo, but grows more quickly and requires extensive
+        packing on a regular basis.
+
+        If this parameter is set to false, the adapter will create and
+        use a history-free database schema. Undo will not be supported,
+        but the database will not grow as quickly. The database will
+        still require regular garbage collection (which is accessible
+        through the database pack mechanism.)
+
+        This parameter must not change once the database schema has
+        been installed. If you want to convert between a
+        history-preserving and a history-free database, use the
+        zodbconvert utility to copy to a new database.
+      </description>
+    </key>
+
     <key name="user" datatype="string" required="yes">
       <description>
         The Oracle account name
@@ -172,6 +213,27 @@
 
   <sectiontype name="mysql" implements="relstorage.adapter"
     datatype=".MySQLAdapterFactory">
+
+    <key name="keep-history" datatype="boolean" default="true">
+      <description>
+        If this parameter is set to true (the default), the adapter
+        will create and use a history-preserving database schema,
+        similar to FileStorage. A history-preserving schema supports
+        ZODB-level undo, but grows more quickly and requires extensive
+        packing on a regular basis.
+
+        If this parameter is set to false, the adapter will create and
+        use a history-free database schema. Undo will not be supported,
+        but the database will not grow as quickly. The database will
+        still require regular garbage collection (which is accessible
+        through the database pack mechanism.)
+
+        This parameter must not change once the database schema has
+        been installed. If you want to convert between a
+        history-preserving and a history-free database, use the
+        zodbconvert utility to copy to a new database.
+      </description>
+    </key>
 
     <key name="host" datatype="string" required="no">
       <description>
